--- a/service.html
+++ b/service.html
@@ -313,7 +313,7 @@
                     <div class="service-icon">
                         <i class="fas fa-camera"></i>
                     </div>
-                    <h3 class="service-title">Pesparani Provinsi</h3>
+                    <h3 class="service-title">Pesparani III</h3>
                     <p class="service-description">Pada pesparani ini kami di tugaskan medokumentasikan dan melivesreamingkan kegiatan tersebut,agar bisa di lihat secara online dan agar bisa di kenang</p>
                     <div class="service-price">8-12-2024</div>
                 </div>
